<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="wrap_content" android:layout_height="wrap_content" android:scrollbars="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="10dp"
	    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" >
<!--  		<TextView  
		    android:id="@+id/TextViewTitle"  
		    android:layout_width="wrap_content"  
		    android:layout_height="wrap_content"  
		    android:text="@string/feedback_title"  
		    android:textSize="10pt">  
		</TextView>	
-->		<EditText  
		    android:id="@+id/EditTextName"  
		    android:layout_height="wrap_content"  
		    android:hint="@string/feedback_name"  
		    android:inputType="textPersonName"  
		    android:layout_width="fill_parent">  
		</EditText>	    
		<EditText  
		    android:id="@+id/EditTextEmail"  
		    android:layout_height="wrap_content"  
		    android:hint="@string/feedback_email"  
		    android:inputType="textEmailAddress"  
		    android:layout_width="fill_parent">  
		</EditText> 	
		<Spinner  
		    android:id="@+id/SpinnerFeedbackType"  
		    android:layout_height="wrap_content"  
		    android:prompt="@string/feedback_type"  
		    android:layout_width="fill_parent"  
		    android:entries="@array/feedbacktypelist">  
		</Spinner>	
		<EditText  
		    android:id="@+id/EditTextFeedbackBody"  
		    android:layout_height="wrap_content"  
		    android:hint="@string/feedback_body"  
		    android:inputType="textMultiLine"  
		    android:lines="5"  
		    android:layout_width="fill_parent">  
		</EditText> 
		<CheckBox  
		    android:id="@+id/CheckBoxResponse"  
		    android:layout_height="wrap_content"  
		    android:text="@string/feedback_contactme"  
		    android:layout_width="fill_parent">  
		</CheckBox>
		<Button  
		    android:id="@+id/ButtonSendFeedback"  
		    android:layout_height="wrap_content"  
		    android:text="@string/feedback_send"  
		    android:onClick="sendFeedback"  
		    android:layout_width="fill_parent">  
		</Button> 
	</LinearLayout>
</ScrollView>