<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:id="@+id/helpdialog_root">

	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" >
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
                android:padding="5dp" android:text="@string/help_welcome" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:padding="5dp" android:text="@string/help_overview" />
            <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" >
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" >
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:src="@drawable/play" android:padding="5dp" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:text="@string/help_play" android:padding="5dp" android:layout_weight="1" />
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" >
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:src="@drawable/pause" android:padding="5dp" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:text="@string/help_pause" android:padding="5dp" android:layout_weight="1" />
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" >
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:src="@drawable/repeat" android:padding="5dp" />
                    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:text="@string/help_repeat" android:padding="5dp" android:layout_weight="1" />
                </TableRow>
            </TableLayout>
       </LinearLayout>
	</ScrollView>

</LinearLayout>
